bug 163572 : converted string is inserted every time space key is pressed patch by masayuki@d-toybox.com (r=pinkerton,bryner,amardare,emaijala,sfraser,roc, sr=bryner,sfraser,roc)