widget/src/cocoa/nsChildView.mm
@@ -2047,6 +2047,11 @@ NS_IMETHODIMP nsChildView::GetIMEOpenState(PRBool* aState)
   return NS_ERROR_NOT_IMPLEMENTED;
 }
 
+NS_IMETHODIMP nsChildView::CancelIMEComposition()
+{
+  return NS_ERROR_NOT_IMPLEMENTED;
+}
+
 
 //
 // GetQuickDrawPort
