widget/src/gtk/nsWidget.h
@@ -172,6 +172,7 @@ public:
   NS_IMETHOD ResetInputState();
   NS_IMETHOD SetIMEOpenState(PRBool aState);
   NS_IMETHOD GetIMEOpenState(PRBool* aState);
+  NS_IMETHOD CancelIMEComposition();
 
   void InitEvent(nsGUIEvent& event, nsPoint* aPoint = nsnull);
     
