widget/src/mac/nsWindow.cpp
@@ -2653,6 +2653,10 @@ NS_IMETHODIMP nsWindow::GetIMEOpenState(PRBool* aState) {
   return NS_ERROR_NOT_IMPLEMENTED;
 }
 
+NS_IMETHODIMP nsWindow::CancelIMEComposition() {
+  return NS_ERROR_NOT_IMPLEMENTED;
+}
+
 
 #if !TARGET_CARBON
 
